--- a/src/styles.css
+++ b/src/styles.css
@@ -1,32 +1,51 @@
+@import url(https://fonts.googleapis.com/css?family=Overpass:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+
+:root {
+  --reseda-green: #5D8064;
+  --cambridge-blue: #9AB69B;
+  --battleship-gray: #909590;
+  --dim-gray: #6E7370;
+  --ebony: #4E5652;
+}
+
 * {
     padding: 0;
     margin: 0;
 }
 
 #navbar {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 50px;
   z-index: 1;
   text-align: right;
+  padding-top: 25px;
+}
+
+#navbar a {
+  font-family: Overpass;
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+  padding-right: 80px;
 }
 
 .wrapper {
-    background-color: #016A70;
-    height: 1250px;
+    background-color: var(--reseda-green);
+    height: 600px;
 }
 
 #profile-pic {
     position: absolute;
     border-radius: 50%;
-    width: 500px;
-    height: 700px;
+    width: 300px;
+    height: 450px;
     object-fit: cover;
     top: 10%;
     left: 5%;
-
+    margin-top: 15px;
 }
 
 @media screen and (min-width: 480px) {
