finished Home section/added remaining section outline

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 
 @import url(https://fonts.googleapis.com/css?family=Be+Vietnam+Pro:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
+@import url(https://fonts.googleapis.com/css?family=Comfortaa:300,regular,500,600,700);
+
 :root {
   --reseda-green: #5D8064;
   --cambridge-blue: #9AB69B;
@@ -12,7 +14,7 @@
 
 * {
     padding: 0;
-    margin: 0;
+    margin: 0%;
 }
 
 #navbar {
@@ -23,7 +25,8 @@
   height: 50px;
   z-index: 1;
   text-align: right;
-  padding-top: 25px;
+  padding: 50px 0 0;
+  background-color: var(--reseda-green);
 }
 
 #navbar a {
@@ -36,6 +39,7 @@
   font-family: Overpass;
   font-size: 22px;
   color: black;
+  margin-top: 200px;
 }
 
 .section-link:hover {
@@ -43,8 +47,13 @@
 }
 
 .wrapper {
-    background-color: var(--reseda-green);
-    height: 725px;
+    position: relative;
+}
+
+#home {
+  position: relative;
+  background-color: var(--reseda-green);
+  height: 800px;
 }
 
 #profile-pic {
@@ -53,15 +62,15 @@
     width: 300px;
     height: 450px;
     object-fit: cover;
-    top: 10%;
-    left: 5%;
+    top: 20%;
+    left: 7%;
     margin-top: 15px;
 }
 
 #welcome-section {
   position: absolute;
   display: block;
-  top: 12%;
+  top: 30%;
   right: 10%;
   font-family: Be Vietnam Pro;
 }
@@ -76,6 +85,48 @@
 
 #welcome-section p:first-of-type {
   font-size: 18px;
+  margin-bottom: 5rem;
+}
+
+#welcome-section form {
+  display: inline;
+  margin-left: 20px;
+}
+
+.ext-link {
+  border-radius: 20px;
+  width: 40%;
+  font-size: 20px;
+  padding: 8px 5px;
+  background-color: var(--battleship-gray);
+  border: solid 2px var(--cambridge-blue);
+  font-family: Overpass;
+  font-weight: bold;
+}
+
+.ext-link:hover {
+  background-color: var(--dim-gray);
+  color: white;
+}
+
+.section-header {
+  font-family: Comfortaa;
+  font-size: 40px;
+  text-align: center;
+  padding: 0 auto;
+  margin: 5% auto 3%;
+}
+
+#aboutme {
+  position: relative;
+}
+
+#projects {
+  position: relative;
+}
+
+#contact {
+  position: relative;
 }
 
 @media screen and (min-width: 480px) {
