--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@
 
 * {
     padding: 0;
-    margin: 0%;
+    margin: 0;
 }
 
 #navbar {
@@ -117,21 +117,42 @@
   margin: 5% auto 3%;
 }
 
-#aboutme {
-  position: relative;
+.flex-parent {
+  display: flex;
+  justify-content: center;
 }
 
-#aboutme span {
-  margin: 0 50px 0 25px;
-  max-width: 70%;
+@media screen and (max-width: 1120px) {
+  .flex-parent {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #aboutme-bio {
+    margin: 5% 2% 5%
+  }
+}
+
+#aboutme {
+  position: relative;
+  display: block;
+}
+
+#aboutme-bio {
+  position: relative;
+  margin: 5% 2% 10%;
+  min-width: 500px;
+  max-width: 50%;
+  font-family: Be Vietnam Pro;
+  font-size: 20px;
+  overflow: hidden;
 }
 
 #headshot {
   position: relative;
-  top: 50px;
-  margin-left: 7%;
-  max-width: 30%;
+  margin: 3% 5%;
   width: 320px;
+  min-width: 320px;
   height: 320px;
   border: solid 10px var(--dim-gray);
   border-radius: 20px;
