--- a/src/styles.css
+++ b/src/styles.css
@@ -18,9 +18,10 @@
 }
 
 #navbar {
-  position: absolute;
+  position: relative;
+  display: block;
   top: 0;
-  left: 0;
+  right: 0;
   width: 100%;
   height: 50px;
   z-index: 1;
@@ -53,26 +54,20 @@
 #home {
   position: relative;
   background-color: var(--reseda-green);
-  height: 800px;
+  height: 750px;
 }
 
 #profile-pic {
-    position: absolute;
     border-radius: 50%;
     width: 300px;
     height: 450px;
     object-fit: cover;
-    top: 20%;
-    left: 7%;
-    margin-top: 15px;
+    margin: 100px 120px 50px 100px;
 }
 
 #welcome-section {
-  position: absolute;
-  display: block;
-  top: 30%;
-  right: 10%;
   font-family: Be Vietnam Pro;
+  margin: 160px 100px 50px 120px;
 }
 
 #welcome-section h2:first-of-type {
@@ -83,9 +78,10 @@
   margin-bottom: 1.5rem;
 }
 
-#welcome-section p:first-of-type {
+#welcome-section p {
   font-size: 18px;
   margin-bottom: 5rem;
+  min-width: 445px;
 }
 
 #welcome-section form {
@@ -126,6 +122,14 @@
   .flex-parent {
     flex-direction: column;
     align-items: center;
+  }
+
+  #home {
+    height: 950px;
+  }
+
+  #welcome-section {
+    margin: 25px 100px;
   }
 
   #aboutme-bio {
